Fix overflow issues

--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,13 @@
 html,
 body {
   height: 100%;
+  min-height: 400px;
   width: 100%;
-  overflow: hidden;
-  scroll-behavior: none;
+  overflow-x: hidden;
 }
 
 body {
-  position: fixed;
-  width: 100%;
+  position: absolute;
 }
 
 #root {
